--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,27 @@
 <html lang="">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DF53F33B5K"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { window.dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-DF53F33B5K');
+  </script>
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="apple-mobile-web-app-capable" content="no"> 
-  <meta name="apple-mobile-web-app-status-bar-style" content="black"> 
+  <meta name="apple-mobile-web-app-capable" content="no">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
   <link rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./loader.css">
-  <link rel="stylesheet" href="./dark.css">
 </head>
 
 <body>
@@ -26,4 +35,5 @@
 </body>
 
 <script src="./idb.js"></script>
+
 </html>
