--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     gtag('config', 'G-DF53F33B5K');
   </script>
-  
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -21,8 +21,16 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
-  <link rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="./loader.css">
+  <style>
+    .app-background {
+      background-image: url('./bg.min.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  </style>
 </head>
 
 <body>
@@ -30,11 +38,10 @@
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
   </noscript>
-  <div id="app"></div>
+  <div id="app" class="app-background"></div>
   <!-- built files will be auto injected -->
 </body>
 
 <script src="./idb.js"></script>
-
 
 </html>
