--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="description" content="This is the meta description for my Tutor App">
   <meta name="apple-mobile-web-app-capable" content="no">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
